# librealsense

./: .gitignore  CMakeLists.txt  package.xml  readme.md
CMake/: global_config.cmake  install_config.cmake  libusb_config.cmake  lrs_options.cmake  unix_config.cmake
common/: measurement.cpp  metadata-helper.cpp  model-views.cpp  model-views.h  post-processing-filter.h  processing-block-model.h  realsense-ui-advanced-mode.h  rendering.h  viewer.cpp  viewer.h
common/sw-update/: dev-updates-profile.cpp  dev-updates-profile.h
doc/: installation_osx.md  readme.md
doc/android/: native-lib.cpp_
doc/leggedrobotics/: additional_instructions.md
doc/stepbystep/: getting_started_with_openCV.md
examples/: CMakeLists.txt  example.hpp
examples/C/depth/: CMakeLists.txt  rs-depth.c
examples/align/: CMakeLists.txt  readme.md  rs-align.cpp
examples/ar-advanced/: rs-ar-advanced.cpp
examples/callback/: rs-callback.cpp
examples/capture/: CMakeLists.txt  readme.md  rs-capture.cpp
examples/gl/: rs-gl.cpp
examples/measure/: CMakeLists.txt  rs-measure.cpp
examples/multicam/: CMakeLists.txt  readme.md  rs-multicam.cpp
examples/pointcloud/: CMakeLists.txt  readme.md  rs-pointcloud.cpp
examples/pose/: rs-pose.cpp
include/: CMakeLists.txt  readme.md
scripts/: api_check.sh  patch-utils.sh
src/: CMakeLists.txt  backend.h  device_hub.cpp  image_avx.cpp  rs.cpp  types.cpp  types.h
tools/: CMakeLists.txt
unit-tests/: CMakeLists.txt  unit-tests-common.h  unit-tests-live.cpp  unit-tests-post-processing-from-bag.cpp  unit-tests-post-processing.cpp
wrappers/: CMakeLists.txt
(+150 files in other folders)
